src/yetty/ygui-c/ygui.h

/*=============================================================================
 * Library Initialization
 *===========================================================================*/

/* Initialize the library (sets up raw terminal mode, signal handlers)
 * Must be called before any other ygui function.
 * Returns 0 on success, -1 on error. */
int ygui_init(void);
/* Shutdown the library (restores terminal settings)
 * Should be called before exit. */
void ygui_shutdown(void);
/*=============================================================================
 * Opaque Types
 *===========================================================================*/

typedef struct ygui_engine ygui_engine_t;
typedef struct ygui_widget ygui_widget_t;
typedef struct ygui_theme ygui_theme_t;
typedef struct ydraw_buffer ydraw_buffer_t;
/*=============================================================================
 * Callbacks
 *===========================================================================*/

typedef void (*ygui_event_callback_t)(const ygui_event_t* event, void* userdata);
/*=============================================================================
 * Engine API
 *===========================================================================*/

/* Create/destroy */
ygui_engine_t* ygui_engine_create(ydraw_buffer_t* buffer);
void ygui_engine_destroy(ygui_engine_t* engine);
/* Configuration */
void ygui_engine_set_size(ygui_engine_t* engine, float width, float height);
void ygui_engine_set_event_callback(ygui_engine_t* engine,
                                     ygui_event_callback_t callback,
                                     void* userdata);
/* State */
int ygui_engine_is_dirty(const ygui_engine_t* engine);
void ygui_engine_mark_dirty(ygui_engine_t* engine);
void ygui_engine_rebuild(ygui_engine_t* engine);
void ygui_engine_clear(ygui_engine_t* engine);
/* Input handling */
void ygui_engine_mouse_move(ygui_engine_t* engine, float x, float y);
void ygui_engine_mouse_down(ygui_engine_t* engine, float x, float y, int button);
void ygui_engine_mouse_up(ygui_engine_t* engine, float x, float y, int button);
void ygui_engine_mouse_scroll(ygui_engine_t* engine, float x, float y,
                               float dx, float dy);
/* Widget lookup */
ygui_widget_t* ygui_engine_find(ygui_engine_t* engine, const char* id);
/*=============================================================================
 * Event Loop API (for card mouse events from yetty)
 *===========================================================================*/

/* Subscribe to card mouse events (sends DEC modes 1500/1501 to stdout) */
void ygui_engine_subscribe_clicks(ygui_engine_t* engine, int enable);
void ygui_engine_subscribe_moves(ygui_engine_t* engine, int enable);
/* Poll for events from stdin
 * timeout_ms: -1 = block forever, 0 = non-blocking, >0 = milliseconds
 * Returns: 1 if event processed, 0 if timeout, -1 on error */
int ygui_engine_poll(ygui_engine_t* engine, int timeout_ms);
/* Run event loop until ygui_engine_stop() called */
void ygui_engine_run(ygui_engine_t* engine);
void ygui_engine_stop(ygui_engine_t* engine);
/*=============================================================================
 * Widget Creation
 *===========================================================================*/

ygui_widget_t* ygui_button(ygui_engine_t* engine, const char* id,
                           float x, float y, float w, float h,
                           const char* label);
ygui_widget_t* ygui_label(ygui_engine_t* engine, const char* id,
                          float x, float y, const char* text);
ygui_widget_t* ygui_slider(ygui_engine_t* engine, const char* id,
                           float x, float y, float w, float h,
                           float min_val, float max_val, float value);
ygui_widget_t* ygui_checkbox(ygui_engine_t* engine, const char* id,
                             float x, float y, float w, float h,
                             const char* label, int checked);
ygui_widget_t* ygui_panel(ygui_engine_t* engine, const char* id,
                          float x, float y, float w, float h);
ygui_widget_t* ygui_progress(ygui_engine_t* engine, const char* id,
                             float x, float y, float w, float h,
                             float value);
/*=============================================================================
 * Widget Hierarchy
 *===========================================================================*/

void ygui_widget_add_child(ygui_widget_t* parent, ygui_widget_t* child);
void ygui_widget_remove(ygui_widget_t* widget);
void ygui_widget_set_position(ygui_widget_t* widget, float x, float y);
void ygui_widget_set_size(ygui_widget_t* widget, float w, float h);
void ygui_widget_set_visible(ygui_widget_t* widget, int visible);
void ygui_widget_set_enabled(ygui_widget_t* widget, int enabled);
/* Styling */
void ygui_widget_set_bg_color(ygui_widget_t* widget, uint32_t color);
/*=============================================================================
 * Widget-Specific Properties
 *===========================================================================*/

/* Button */
void ygui_button_set_label(ygui_widget_t* widget, const char* label);
/* Label */
void ygui_label_set_text(ygui_widget_t* widget, const char* text);
/* Slider */
void ygui_slider_set_value(ygui_widget_t* widget, float value);
float ygui_slider_get_value(const ygui_widget_t* widget);
/* Checkbox */
void ygui_checkbox_set_checked(ygui_widget_t* widget, int checked);
int ygui_checkbox_get_checked(const ygui_widget_t* widget);
void ygui_panel_set_content_size(ygui_widget_t* widget, float w, float h);
/* Progress */
void ygui_progress_set_value(ygui_widget_t* widget, float value);
ygui_theme_t* ygui_theme_create_default(void);
void ygui_theme_destroy(ygui_theme_t* theme);
const char* ygui_version(void);