src/ygui-bindings/python/ygui.py

"""
YGui Python Bindings

Pure Python bindings for YGui-C using ctypes.
Includes OSC output for yetty terminal.
"""

import ctypes
from ctypes import (
    c_void_p, c_char_p, c_float, c_int, c_uint32, c_int32, c_uint8,
    POINTER, Structure, Union, CFUNCTYPE, byref
)
from typing import Callable, Optional, List, Tuple
from enum import IntEnum
import os
import sys
import base64

#=============================================================================
# OSC output helpers for yetty terminal
#=============================================================================

VENDOR_ID = 666666

def _write_osc(seq: bytes):
    """Write OSC sequence to stdout."""
    sys.stdout.buffer.write(seq)
    sys.stdout.buffer.flush()

def osc_create_ydraw(name: str, x: int, y: int, w: int, h: int, data: bytes):
    """Send OSC command to create a ydraw card."""
    b64 = base64.b64encode(data).decode('ascii')
    seq = f"\033]{VENDOR_ID};run -c ydraw -x {x} -y {y} -w {w} -h {h} -r --name {name};;{b64}\033\\".encode()
    _write_osc(seq)

def osc_update_ydraw(name: str, data: bytes):
    """Send OSC command to update a ydraw card."""
    b64 = base64.b64encode(data).decode('ascii')
    seq = f"\033]{VENDOR_ID};update --name {name};;{b64}\033\\".encode()
    _write_osc(seq)

def osc_kill(name: str):
    """Send OSC command to kill a card."""
    seq = f"\033]{VENDOR_ID};kill --name {name}\033\\".encode()
    _write_osc(seq)

#=============================================================================
# Library loading
#=============================================================================

def _load_library():
    """Load libygui.so from common locations."""
    search_paths = [
        os.path.join(os.path.dirname(__file__), "libygui.so"),
        os.path.join(os.path.dirname(__file__), "..", "..", "build", "libygui.so"),
        "libygui.so",
    ]
    for path in search_paths:
        try:
            return ctypes.CDLL(path)
        except OSError:
            continue
    raise ImportError("Could not load libygui.so")

_lib = None

def _get_lib():
    global _lib
    if _lib is None:
        _lib = _load_library()
        _setup_functions(_lib)
    return _lib


#=============================================================================
# Enums
#=============================================================================

class WidgetType(IntEnum):
    BUTTON = 0
    LABEL = 1
    SLIDER = 2
    CHECKBOX = 3
    TEXTINPUT = 4
    PANEL = 5
    HBOX = 6
    VBOX = 7
    DROPDOWN = 8
    LISTBOX = 9
    TABLE = 10
    TABBAR = 11
    COLORPICKER = 12
    SCROLLAREA = 13
    PROGRESS = 14
    SEPARATOR = 15
    CUSTOM = 16


class EventType(IntEnum):
    NONE = 0
    CLICK = 1
    PRESS = 2
    RELEASE = 3
    CHANGE = 4
    SCROLL = 5
    FOCUS = 6
    BLUR = 7
    KEY = 8
    TEXT = 9


class Flags(IntEnum):
    NONE = 0
    HOVER = 1 << 0
    PRESSED = 1 << 1
    FOCUSED = 1 << 2
    DISABLED = 1 << 3
    CHECKED = 1 << 4
    OPEN = 1 << 5
    VISIBLE = 1 << 6


#=============================================================================
# Ctypes structures
#=============================================================================

class _ColorData(Structure):
    _fields_ = [("r", c_float), ("g", c_float), ("b", c_float), ("a", c_float)]

class _ScrollData(Structure):
    _fields_ = [("x", c_float), ("y", c_float)]

class _KeyData(Structure):
    _fields_ = [("key", c_uint32), ("mods", c_int)]

class _EventDataUnion(Union):
    _fields_ = [
        ("float_value", c_float),
        ("int_value", c_int32),
        ("bool_value", c_int),
        ("string_value", c_char_p),
        ("color", _ColorData),
        ("scroll", _ScrollData),
        ("key", _KeyData),
    ]

class _YGuiEvent(Structure):
    _fields_ = [
        ("widget_id", c_char_p),
        ("type", c_int),
        ("data", _EventDataUnion),
    ]


_EventCallbackType = CFUNCTYPE(None, POINTER(_YGuiEvent), c_void_p)


def _setup_functions(lib):
    """Set up ctypes function signatures."""

    # Library init/shutdown
    lib.ygui_init.argtypes = []
    lib.ygui_init.restype = c_int

    lib.ygui_shutdown.argtypes = []
    lib.ygui_shutdown.restype = None

    # YDraw buffer
    lib.ydraw_buffer_create.argtypes = []
    lib.ydraw_buffer_create.restype = c_void_p

    lib.ydraw_buffer_destroy.argtypes = [c_void_p]
    lib.ydraw_buffer_destroy.restype = None

    lib.ydraw_buffer_clear.argtypes = [c_void_p]
    lib.ydraw_buffer_clear.restype = None

    lib.ydraw_buffer_serialize.argtypes = [c_void_p, POINTER(POINTER(c_uint8))]
    lib.ydraw_buffer_serialize.restype = c_uint32

    # Engine
    lib.ygui_engine_create.argtypes = [c_void_p]
    lib.ygui_engine_create.restype = c_void_p

    lib.ygui_engine_destroy.argtypes = [c_void_p]
    lib.ygui_engine_destroy.restype = None

    lib.ygui_engine_set_size.argtypes = [c_void_p, c_float, c_float]
    lib.ygui_engine_set_size.restype = None

    lib.ygui_engine_set_event_callback.argtypes = [c_void_p, _EventCallbackType, c_void_p]
    lib.ygui_engine_set_event_callback.restype = None

    lib.ygui_engine_is_dirty.argtypes = [c_void_p]
    lib.ygui_engine_is_dirty.restype = c_int

    lib.ygui_engine_mark_dirty.argtypes = [c_void_p]
    lib.ygui_engine_mark_dirty.restype = None

    lib.ygui_engine_rebuild.argtypes = [c_void_p]
    lib.ygui_engine_rebuild.restype = None

    lib.ygui_engine_clear.argtypes = [c_void_p]
    lib.ygui_engine_clear.restype = None

    lib.ygui_engine_mouse_move.argtypes = [c_void_p, c_float, c_float]
    lib.ygui_engine_mouse_move.restype = None

    lib.ygui_engine_mouse_down.argtypes = [c_void_p, c_float, c_float, c_int]
    lib.ygui_engine_mouse_down.restype = None

    lib.ygui_engine_mouse_up.argtypes = [c_void_p, c_float, c_float, c_int]
    lib.ygui_engine_mouse_up.restype = None

    lib.ygui_engine_mouse_scroll.argtypes = [c_void_p, c_float, c_float, c_float, c_float]
    lib.ygui_engine_mouse_scroll.restype = None

    lib.ygui_engine_find.argtypes = [c_void_p, c_char_p]
    lib.ygui_engine_find.restype = c_void_p

    # Event loop
    lib.ygui_engine_subscribe_clicks.argtypes = [c_void_p, c_int]
    lib.ygui_engine_subscribe_clicks.restype = None

    lib.ygui_engine_subscribe_moves.argtypes = [c_void_p, c_int]
    lib.ygui_engine_subscribe_moves.restype = None

    lib.ygui_engine_poll.argtypes = [c_void_p, c_int]
    lib.ygui_engine_poll.restype = c_int

    lib.ygui_engine_run.argtypes = [c_void_p]
    lib.ygui_engine_run.restype = None

    lib.ygui_engine_stop.argtypes = [c_void_p]
    lib.ygui_engine_stop.restype = None

    # Widgets
    lib.ygui_button.argtypes = [c_void_p, c_char_p, c_float, c_float, c_float, c_float, c_char_p]
    lib.ygui_button.restype = c_void_p

    lib.ygui_label.argtypes = [c_void_p, c_char_p, c_float, c_float, c_char_p]
    lib.ygui_label.restype = c_void_p

    lib.ygui_slider.argtypes = [c_void_p, c_char_p, c_float, c_float, c_float, c_float, c_float, c_float, c_float]
    lib.ygui_slider.restype = c_void_p

    lib.ygui_checkbox.argtypes = [c_void_p, c_char_p, c_float, c_float, c_float, c_float, c_char_p, c_int]
    lib.ygui_checkbox.restype = c_void_p

    lib.ygui_panel.argtypes = [c_void_p, c_char_p, c_float, c_float, c_float, c_float]
    lib.ygui_panel.restype = c_void_p

    lib.ygui_progress.argtypes = [c_void_p, c_char_p, c_float, c_float, c_float, c_float, c_float]
    lib.ygui_progress.restype = c_void_p

    # Widget hierarchy
    lib.ygui_widget_add_child.argtypes = [c_void_p, c_void_p]
    lib.ygui_widget_add_child.restype = None

    lib.ygui_widget_remove.argtypes = [c_void_p]
    lib.ygui_widget_remove.restype = None

    # Widget properties
    lib.ygui_widget_set_position.argtypes = [c_void_p, c_float, c_float]
    lib.ygui_widget_set_position.restype = None

    lib.ygui_widget_set_size.argtypes = [c_void_p, c_float, c_float]
    lib.ygui_widget_set_size.restype = None

    lib.ygui_widget_set_visible.argtypes = [c_void_p, c_int]
    lib.ygui_widget_set_visible.restype = None

    lib.ygui_widget_set_enabled.argtypes = [c_void_p, c_int]
    lib.ygui_widget_set_enabled.restype = None

    lib.ygui_widget_set_bg_color.argtypes = [c_void_p, c_uint32]
    lib.ygui_widget_set_bg_color.restype = None

    lib.ygui_slider_set_value.argtypes = [c_void_p, c_float]
    lib.ygui_slider_set_value.restype = None

    lib.ygui_slider_get_value.argtypes = [c_void_p]
    lib.ygui_slider_get_value.restype = c_float

    lib.ygui_checkbox_set_checked.argtypes = [c_void_p, c_int]
    lib.ygui_checkbox_set_checked.restype = None

    lib.ygui_checkbox_get_checked.argtypes = [c_void_p]
    lib.ygui_checkbox_get_checked.restype = c_int

    lib.ygui_progress_set_value.argtypes = [c_void_p, c_float]
    lib.ygui_progress_set_value.restype = None

    lib.ygui_button_set_label.argtypes = [c_void_p, c_char_p]
    lib.ygui_button_set_label.restype = None

    lib.ygui_label_set_text.argtypes = [c_void_p, c_char_p]
    lib.ygui_label_set_text.restype = None

    lib.ygui_panel_set_content_size.argtypes = [c_void_p, c_float, c_float]
    lib.ygui_panel_set_content_size.restype = None

    # Theme
    lib.ygui_theme_create_default.argtypes = []
    lib.ygui_theme_create_default.restype = c_void_p

    lib.ygui_theme_destroy.argtypes = [c_void_p]
    lib.ygui_theme_destroy.restype = None

    # Version
    lib.ygui_version.argtypes = []
    lib.ygui_version.restype = c_char_p


#=============================================================================
# YDraw Buffer wrapper
#=============================================================================

class YDrawBuffer:
    """YDraw buffer for primitives."""

    def __init__(self):
        self._lib = _get_lib()
        self._handle = self._lib.ydraw_buffer_create()
        if not self._handle:
            raise RuntimeError("Failed to create YDraw buffer")

    def __del__(self):
        if hasattr(self, "_handle") and self._handle:
            self._lib.ydraw_buffer_destroy(self._handle)

    @property
    def handle(self):
        return self._handle

    def clear(self):
        self._lib.ydraw_buffer_clear(self._handle)

    def serialize(self) -> bytes:
        """Serialize buffer to binary format for OSC transport."""
        data_ptr = POINTER(c_uint8)()
        size = self._lib.ydraw_buffer_serialize(self._handle, byref(data_ptr))
        if size == 0 or not data_ptr:
            return b""
        return bytes(data_ptr[:size])


#=============================================================================
# Event wrapper
#=============================================================================

class Event:
    """Widget event."""

    def __init__(self, widget_id: str, event_type: EventType, data=None):
        self.widget_id = widget_id
        self.type = event_type
        self.data = data

    @classmethod
    def _from_c(cls, c_event: _YGuiEvent) -> "Event":
        widget_id = c_event.widget_id.decode("utf-8") if c_event.widget_id else ""
        event_type = EventType(c_event.type)

        data = None
        if event_type == EventType.CHANGE:
            data = c_event.data.float_value
        elif event_type == EventType.SCROLL:
            data = (c_event.data.scroll.x, c_event.data.scroll.y)

        return cls(widget_id, event_type, data)

    def __repr__(self):
        return f"Event({self.widget_id!r}, {self.type.name}, {self.data!r})"


#=============================================================================
# Widget wrappers
#=============================================================================

class Widget:
    """Base widget wrapper."""

    def __init__(self, handle: c_void_p):
        self._handle = handle
        self._lib = _get_lib()

    @property
    def handle(self):
        return self._handle

    def set_position(self, x: float, y: float):
        self._lib.ygui_widget_set_position(self._handle, x, y)
